bindings.rs

/* automatically generated by rust-bindgen 0.71.1 */

pub const DRIVER_VERSION: f64 = 3.51;
unsafe extern "C" {
    pub fn Close();
}
unsafe extern "C" {
    pub fn ListAll(
        DeviceType: ::std::os::raw::c_long,
        ConnectionType: ::std::os::raw::c_long,
        pNumFound: *mut ::std::os::raw::c_long,
        pSerialNumbers: *mut ::std::os::raw::c_long,
        pIDs: *mut ::std::os::raw::c_long,
        pAddresses: *mut f64,
    ) -> ::std::os::raw::c_long;
}
unsafe extern "C" {
    pub fn ListAllS(
        pDeviceType: *const ::std::os::raw::c_char,
        pConnectionType: *const ::std::os::raw::c_char,
        pNumFound: *mut ::std::os::raw::c_long,
        pSerialNumbers: *mut ::std::os::raw::c_long,
        pIDs: *mut ::std::os::raw::c_long,
        pAddresses: *mut f64,
    ) -> ::std::os::raw::c_long;
}
unsafe extern "C" {
    pub fn OpenLabJack(
        DeviceType: ::std::os::raw::c_long,
        ConnectionType: ::std::os::raw::c_long,
        pAddress: *const ::std::os::raw::c_char,
        FirstFound: ::std::os::raw::c_long,
        pHandle: *mut ::std::os::raw::c_long,
    ) -> ::std::os::raw::c_long;
}
unsafe extern "C" {
    pub fn OpenLabJackS(
        pDeviceType: *const ::std::os::raw::c_char,
        pConnectionType: *const ::std::os::raw::c_char,
        pAddress: *const ::std::os::raw::c_char,
        FirstFound: ::std::os::raw::c_long,
        pHandle: *mut ::std::os::raw::c_long,
    ) -> ::std::os::raw::c_long;
}
unsafe extern "C" {
    pub fn AddRequest(
        Handle: ::std::os::raw::c_long,
        IOType: ::std::os::raw::c_long,
        Channel: ::std::os::raw::c_long,
        Value: f64,
        x1: ::std::os::raw::c_long,
        UserData: f64,
    ) -> ::std::os::raw::c_long;
}
unsafe extern "C" {
    pub fn AddRequestS(
        Handle: ::std::os::raw::c_long,
        pIOType: *const ::std::os::raw::c_char,
        Channel: ::std::os::raw::c_long,
        Value: f64,
        x1: ::std::os::raw::c_long,
        UserData: f64,
    ) -> ::std::os::raw::c_long;
}
unsafe extern "C" {
    pub fn AddRequestSS(
        Handle: ::std::os::raw::c_long,
        pIOType: *const ::std::os::raw::c_char,
        pChannel: *const ::std::os::raw::c_char,
        Value: f64,
        x1: ::std::os::raw::c_long,
        UserData: f64,
    ) -> ::std::os::raw::c_long;
}
unsafe extern "C" {
    pub fn AddRequestPtr(
        Handle: ::std::os::raw::c_long,
        IOType: ::std::os::raw::c_long,
        Channel: ::std::os::raw::c_long,
        Value: f64,
        x1: *mut ::std::os::raw::c_void,
        UserData: f64,
    ) -> ::std::os::raw::c_long;
}
unsafe extern "C" {
    pub fn Go() -> ::std::os::raw::c_long;
}
unsafe extern "C" {
    pub fn GoOne(Handle: ::std::os::raw::c_long) -> ::std::os::raw::c_long;
}
unsafe extern "C" {
    pub fn eGet(
        Handle: ::std::os::raw::c_long,
        IOType: ::std::os::raw::c_long,
        Channel: ::std::os::raw::c_long,
        pValue: *mut f64,
        x1: ::std::os::raw::c_long,
    ) -> ::std::os::raw::c_long;
}
unsafe extern "C" {
    pub fn eGetPtr(
        Handle: ::std::os::raw::c_long,
        IOType: ::std::os::raw::c_long,
        Channel: ::std::os::raw::c_long,
        pValue: *mut f64,
        x1: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_long;
}
unsafe extern "C" {
    pub fn eGetS(
        Handle: ::std::os::raw::c_long,
        pIOType: *const ::std::os::raw::c_char,
        Channel: ::std::os::raw::c_long,
        pValue: *mut f64,
        x1: ::std::os::raw::c_long,
    ) -> ::std::os::raw::c_long;
}
unsafe extern "C" {
    pub fn eGetSS(
        Handle: ::std::os::raw::c_long,
        pIOType: *const ::std::os::raw::c_char,
        pChannel: *const ::std::os::raw::c_char,
        pValue: *mut f64,
        x1: ::std::os::raw::c_long,
    ) -> ::std::os::raw::c_long;
}
unsafe extern "C" {
    pub fn ePut(
        Handle: ::std::os::raw::c_long,
        IOType: ::std::os::raw::c_long,
        Channel: ::std::os::raw::c_long,
        Value: f64,
        x1: ::std::os::raw::c_long,
    ) -> ::std::os::raw::c_long;
}
unsafe extern "C" {
    pub fn ePutS(
        Handle: ::std::os::raw::c_long,
        pIOType: *const ::std::os::raw::c_char,
        Channel: ::std::os::raw::c_long,
        Value: f64,
        x1: ::std::os::raw::c_long,
    ) -> ::std::os::raw::c_long;
}
unsafe extern "C" {
    pub fn ePutSS(
        Handle: ::std::os::raw::c_long,
        pIOType: *const ::std::os::raw::c_char,
        pChannel: *const ::std::os::raw::c_char,
        Value: f64,
        x1: ::std::os::raw::c_long,
    ) -> ::std::os::raw::c_long;
}
unsafe extern "C" {
    pub fn eGet_DblArray(
        Handle: ::std::os::raw::c_long,
        IOType: ::std::os::raw::c_long,
        Channel: ::std::os::raw::c_long,
        pValue: *mut f64,
        x1: *mut f64,
    ) -> ::std::os::raw::c_long;
}
unsafe extern "C" {
    pub fn eGet_U8Array(
        Handle: ::std::os::raw::c_long,
        IOType: ::std::os::raw::c_long,
        Channel: ::std::os::raw::c_long,
        pValue: *mut f64,
        x1: *mut ::std::os::raw::c_uchar,
    ) -> ::std::os::raw::c_long;
}
unsafe extern "C" {
    pub fn eGetS_DblArray(
        Handle: ::std::os::raw::c_long,
        pIOType: *const ::std::os::raw::c_char,
        Channel: ::std::os::raw::c_long,
        pValue: *mut f64,
        x1: *mut f64,
    ) -> ::std::os::raw::c_long;
}
unsafe extern "C" {
    pub fn eGetS_U8Array(
        Handle: ::std::os::raw::c_long,
        pIOType: *const ::std::os::raw::c_char,
        Channel: ::std::os::raw::c_long,
        pValue: *mut f64,
        x1: *mut ::std::os::raw::c_uchar,
    ) -> ::std::os::raw::c_long;
}
unsafe extern "C" {
    pub fn eGetSS_DblArray(
        Handle: ::std::os::raw::c_long,
        pIOType: *const ::std::os::raw::c_char,
        pChannel: *const ::std::os::raw::c_char,
        pValue: *mut f64,
        x1: *mut f64,
    ) -> ::std::os::raw::c_long;
}
unsafe extern "C" {
    pub fn eGetSS_U8Array(
        Handle: ::std::os::raw::c_long,
        pIOType: *const ::std::os::raw::c_char,
        pChannel: *const ::std::os::raw::c_char,
        pValue: *mut f64,
        x1: *mut ::std::os::raw::c_uchar,
    ) -> ::std::os::raw::c_long;
}
unsafe extern "C" {
    pub fn GetResult(
        Handle: ::std::os::raw::c_long,
        IOType: ::std::os::raw::c_long,
        Channel: ::std::os::raw::c_long,
        pValue: *mut f64,
    ) -> ::std::os::raw::c_long;
}
unsafe extern "C" {
    pub fn GetResultS(
        Handle: ::std::os::raw::c_long,
        pIOType: *const ::std::os::raw::c_char,
        Channel: ::std::os::raw::c_long,
        pValue: *mut f64,
    ) -> ::std::os::raw::c_long;
}
unsafe extern "C" {
    pub fn GetResultSS(
        Handle: ::std::os::raw::c_long,
        pIOType: *const ::std::os::raw::c_char,
        pChannel: *const ::std::os::raw::c_char,
        pValue: *mut f64,
    ) -> ::std::os::raw::c_long;
}
unsafe extern "C" {
    pub fn GetFirstResult(
        Handle: ::std::os::raw::c_long,
        pIOType: *mut ::std::os::raw::c_long,
        pChannel: *mut ::std::os::raw::c_long,
        pValue: *mut f64,
        px1: *mut ::std::os::raw::c_long,
        pUserData: *mut f64,
    ) -> ::std::os::raw::c_long;
}
unsafe extern "C" {
    pub fn GetNextResult(
        Handle: ::std::os::raw::c_long,
        pIOType: *mut ::std::os::raw::c_long,
        pChannel: *mut ::std::os::raw::c_long,
        pValue: *mut f64,
        px1: *mut ::std::os::raw::c_long,
        pUserData: *mut f64,
    ) -> ::std::os::raw::c_long;
}
unsafe extern "C" {
    pub fn eAIN(
        Handle: ::std::os::raw::c_long,
        ChannelP: ::std::os::raw::c_long,
        ChannelN: ::std::os::raw::c_long,
        Voltage: *mut f64,
        Range: ::std::os::raw::c_long,
        Resolution: ::std::os::raw::c_long,
        Settling: ::std::os::raw::c_long,
        Binary: ::std::os::raw::c_long,
        Reserved1: ::std::os::raw::c_long,
        Reserved2: ::std::os::raw::c_long,
    ) -> ::std::os::raw::c_long;
}
unsafe extern "C" {
    pub fn eDAC(
        Handle: ::std::os::raw::c_long,
        Channel: ::std::os::raw::c_long,
        Voltage: f64,
        Binary: ::std::os::raw::c_long,
        Reserved1: ::std::os::raw::c_long,
        Reserved2: ::std::os::raw::c_long,
    ) -> ::std::os::raw::c_long;
}
unsafe extern "C" {
    pub fn eDI(
        Handle: ::std::os::raw::c_long,
        Channel: ::std::os::raw::c_long,
        State: *mut ::std::os::raw::c_long,
    ) -> ::std::os::raw::c_long;
}
unsafe extern "C" {
    pub fn eDO(
        Handle: ::std::os::raw::c_long,
        Channel: ::std::os::raw::c_long,
        State: ::std::os::raw::c_long,
    ) -> ::std::os::raw::c_long;
}
unsafe extern "C" {
    pub fn eAddGoGet(
        Handle: ::std::os::raw::c_long,
        NumRequests: ::std::os::raw::c_long,
        aIOTypes: *mut ::std::os::raw::c_long,
        aChannels: *mut ::std::os::raw::c_long,
        aValues: *mut f64,
        ax1s: *mut ::std::os::raw::c_long,
        aRequestErrors: *mut ::std::os::raw::c_long,
        GoError: *mut ::std::os::raw::c_long,
        aResultErrors: *mut ::std::os::raw::c_long,
    ) -> ::std::os::raw::c_long;
}
unsafe extern "C" {
    pub fn eTCConfig(
        Handle: ::std::os::raw::c_long,
        aEnableTimers: *mut ::std::os::raw::c_long,
        aEnableCounters: *mut ::std::os::raw::c_long,
        TCPinOffset: ::std::os::raw::c_long,
        TimerClockBaseIndex: ::std::os::raw::c_long,
        TimerClockDivisor: ::std::os::raw::c_long,
        aTimerModes: *mut ::std::os::raw::c_long,
        aTimerValues: *mut f64,
        Reserved1: ::std::os::raw::c_long,
        Reserved2: ::std::os::raw::c_long,
    ) -> ::std::os::raw::c_long;
}
unsafe extern "C" {
    pub fn eTCValues(
        Handle: ::std::os::raw::c_long,
        aReadTimers: *mut ::std::os::raw::c_long,
        aUpdateResetTimers: *mut ::std::os::raw::c_long,
        aReadCounters: *mut ::std::os::raw::c_long,
        aResetCounters: *mut ::std::os::raw::c_long,
        aTimerValues: *mut f64,
        aCounterValues: *mut f64,
        Reserved1: ::std::os::raw::c_long,
        Reserved2: ::std::os::raw::c_long,
    ) -> ::std::os::raw::c_long;
}
unsafe extern "C" {
    pub fn eModbus(
        Handle: ::std::os::raw::c_long,
        readwrite: ::std::os::raw::c_long,
        addr: ::std::os::raw::c_long,
        size: ::std::os::raw::c_long,
        value: *mut ::std::os::raw::c_uchar,
    ) -> ::std::os::raw::c_long;
}
unsafe extern "C" {
    pub fn ResetLabJack(Handle: ::std::os::raw::c_long) -> ::std::os::raw::c_long;
}
unsafe extern "C" {
    pub fn GetNextError(
        Handle: ::std::os::raw::c_long,
        pIOType: *mut ::std::os::raw::c_long,
        pChannel: *mut ::std::os::raw::c_long,
    ) -> ::std::os::raw::c_long;
}
unsafe extern "C" {
    pub fn GetStreamError(Handle: ::std::os::raw::c_long) -> ::std::os::raw::c_long;
}
unsafe extern "C" {
    pub fn DoubleToStringAddress(
        Number: f64,
        pString: *mut ::std::os::raw::c_char,
        HexDot: ::std::os::raw::c_long,
    ) -> ::std::os::raw::c_long;
}
unsafe extern "C" {
    pub fn StringToDoubleAddress(
        pString: *const ::std::os::raw::c_char,
        pNumber: *mut f64,
        HexDot: ::std::os::raw::c_long,
    ) -> ::std::os::raw::c_long;
}
unsafe extern "C" {
    pub fn StringToConstant(pString: *const ::std::os::raw::c_char) -> ::std::os::raw::c_long;
}
unsafe extern "C" {
    pub fn ErrorToString(ErrorCode: ::std::os::raw::c_long, pString: *mut ::std::os::raw::c_char);
}
unsafe extern "C" {
    pub fn GetDriverVersion() -> f64;
}
unsafe extern "C" {
    pub fn GetThreadID() -> ::std::os::raw::c_ulong;
}
unsafe extern "C" {
    pub fn TCVoltsToTemp(
        TCType: ::std::os::raw::c_long,
        TCVolts: f64,
        CJTempK: f64,
        pTCTempK: *mut f64,
    ) -> ::std::os::raw::c_long;
}
